--- a/Python/DataAnalysis/numpy.ipynb
+++ b/Python/DataAnalysis/numpy.ipynb
@@ -5,13 +5,353 @@
    "execution_count": null,
    "id": "66a54f93",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr1=np.array([1, 2, 3])\n",
+    "print(arr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "258bd6c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a56a9f2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(arr1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f4244ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Reshaping an Array\n",
+    "arr2=np.array([[1, 2, 3, 4, 5, 6]])\n",
+    "reshaped_arr=arr2.reshape(2, 3)\n",
+    "print(reshaped_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "17f95bee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "The shape of array is  (2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creating an 2D array directly\n",
+    "arr3 = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(arr3)\n",
+    "print(\"The shape of array is \", arr3.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "98939b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 2 4 6 8]\n",
+      "[[0]\n",
+      " [2]\n",
+      " [4]\n",
+      " [6]\n",
+      " [8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr4 = np.arange(0,10,2)\n",
+    "print(arr4)\n",
+    "arr_reshaped = arr4.reshape(5,1)\n",
+    "print(arr_reshaped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a284fbfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ones_Arr = np.ones((3,4))\n",
+    "print(ones_Arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b5bcca82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "identity_Arr = np.eye(4)\n",
+    "print(identity_Arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "33b70adf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the array: (2, 3)\n",
+      "Number of dimensions: 2\n",
+      "Data type of elements: int64\n",
+      "Size of each element in bytes: 8\n",
+      "Total number of elements: 6\n",
+      "Total size of the array in bytes: 48\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Array Attributes\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(\"Shape of the array:\", arr.shape)\n",
+    "print(\"Number of dimensions:\", arr.ndim)\n",
+    "print(\"Data type of elements:\", arr.dtype)\n",
+    "print(\"Size of each element in bytes:\", arr.itemsize)\n",
+    "print(\"Total number of elements:\", arr.size)\n",
+    "print(\"Total size of the array in bytes:\", arr.nbytes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5248f57f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition: [5 7 9]\n",
+      "Subtraction: [-3 -3 -3]\n",
+      "Multiplication: [ 4 10 18]\n",
+      "Division: [0.25 0.4  0.5 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.array([1, 2, 3])\n",
+    "arr2 = np.array([4, 5, 6])\n",
+    "print(\"Addition:\", arr1 + arr2)\n",
+    "print(\"Subtraction:\", arr1 - arr2)\n",
+    "print(\"Multiplication:\", arr1 * arr2)\n",
+    "print(\"Division:\", arr1 / arr2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "721ccdf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square root: [1.         1.41421356 1.73205081 2.         2.23606798 2.44948974\n",
+      " 2.64575131 2.82842712 3.         3.16227766]\n",
+      "Exponential: [2.71828183e+00 7.38905610e+00 2.00855369e+01 5.45981500e+01\n",
+      " 1.48413159e+02 4.03428793e+02 1.09663316e+03 2.98095799e+03\n",
+      " 8.10308393e+03 2.20264658e+04]\n",
+      "Sine: [ 0.84147098  0.90929743  0.14112001 -0.7568025  -0.95892427 -0.2794155\n",
+      "  0.6569866   0.98935825  0.41211849 -0.54402111]\n",
+      "Logarithm: [0.         0.69314718 1.09861229 1.38629436 1.60943791 1.79175947\n",
+      " 1.94591015 2.07944154 2.19722458 2.30258509]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Universal Functions\n",
+    "arr = np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "print(\"Square root:\", np.sqrt(arr))\n",
+    "print(\"Exponential:\", np.exp(arr))\n",
+    "print(\"Sine:\", np.sin(arr))\n",
+    "print(\"Logarithm:\", np.log(arr))   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fed4ef59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array:\n",
+      " [[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "1\n",
+      "[[ 6  7]\n",
+      " [10 11]]\n",
+      "[ 3  7 11]\n",
+      "[[ 6  7]\n",
+      " [10 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Array Slicing\n",
+    "arr = np.array([[1,2,3,4],[5,6,7,8],[9,10,11,12]])\n",
+    "print(\"Original Array:\\n\", arr)\n",
+    "print(arr[0,0])\n",
+    "print(arr[1:, 1:3])\n",
+    "print(arr[:, 2])\n",
+    "print(arr[1:,1:3])\n",
+    "#Modifying Array Elements\n",
+    "arr[0,0]=100\n",
+    "arr[1:,:]=100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "18e165e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 5.5\n",
+      "Median: 5.5\n",
+      "Standard Deviation: 2.8722813232690143\n",
+      "Variance: 8.25\n",
+      "[False False False False False  True  True  True  True  True]\n",
+      "[ 6  7  8  9 10]\n",
+      "[6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Statistical Operations\n",
+    "data  = np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "print(\"Mean:\", np.mean(data))\n",
+    "print(\"Median:\", np.median(data))   \n",
+    "print(\"Standard Deviation:\", np.std(data))\n",
+    "print(\"Variance:\", np.var(data))\n",
+    "\n",
+    "print(data>5)\n",
+    "print(data[data>5])\n",
+    "print(data[(data>5) & (data<8)]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e05e9c8",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv (3.14.0)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
